--- a/bff/pyproject.toml
+++ b/bff/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 fastapi = "^0.115.2"
 uvicorn = "^0.31.1"
 aiohttp = "^3.10.10"
+pydantic-settings = "^2.5.2"
 
 
 [build-system]
