Поправил ошибки запуска сервиса банкоматов через докер. Добавил докерфайл фронту. Теперь все собирается. Фронт поднимается, но с ошибкой

--- a/bff/.env.example
+++ b/bff/.env.example
@@ -1,2 +1,4 @@
-BFF_ATM_HOST="atm"
-BFF_ALGO_HOST="algo"
+BFF_ATM_HOST="localhost"
+BFF_ATM_PORT=12345
+BFF_ALGO_HOST="localhost"
+BFF_ALGO_PORT=1234
