--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
     environment:
       - BFF_ATM_HOST=atm
       - BFF_ALGO_HOST=algo
+      - BFF_ATM_PORT=$ATM_PORT
+      - BFF_ALGO_PORT=$ALGO_PORT
     ports:
       - $BFF_PORT:$BFF_PORT
   atm:
@@ -25,10 +27,10 @@ services:
     container_name: algo
     ports:
       - $ALGO_PORT:$ALGO_PORT
-  front:
+  frontend:
     build:
-      context: front
+      context: frontend
       dockerfile: Dockerfile
-    container_name: front
+    container_name: frontend
     ports:
       - $FRONT_PORT:$FRONT_PORT
