--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,8 +18,18 @@ services:
       context: atm
       dockerfile: Dockerfile
     container_name: atm
+    depends_on:
+      - database
     ports:
       - $ATM_PORT:$ATM_PORT
+  database:
+    image: postgres:16-alpine
+    container_name: database
+    command: -p ${POSTGRES_PORT}
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    ports:
+      - ${POSTGRES_PORT}:${POSTGRES_PORT}
   algo:
     build:
       context: algo
@@ -34,3 +44,6 @@ services:
     container_name: frontend
     ports:
       - $FRONT_PORT:$FRONT_PORT
+
+volumes:
+  postgres_data:
