--- a/.env.deploy
+++ b/.env.deploy
@@ -2,4 +2,6 @@ BFF_PORT=9001
 ATM_PORT=9002
 ALGO_PORT=9003
 FRONT_PORT=8000
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 POSTGRES_PORT=5432
