--- a/atm/pyproject.toml
+++ b/atm/pyproject.toml
@@ -9,6 +9,10 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.115.2"
 uvicorn = "^0.31.1"
+sqlalchemy = "^2.0.36"
+alembic = "^1.13.3"
+asyncpg = "^0.30.0"
+greenlet = "^3.1.1"
 
 
 [build-system]
