--- a/bff/pyproject.toml
+++ b/bff/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.115.2"
 uvicorn = "^0.31.1"
 aiohttp = "^3.10.10"
 pydantic-settings = "^2.5.2"
+pytest = "^8.3.3"
+pytest-asyncio = "^0.24.0"
 
 
 [build-system]
