--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,4 +19,17 @@ jobs:
 
       - name: Test atm
         run: pytest atm/tests
-          
+
+  docs:
+
+    deploy:
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - uses: actions/setup-python@v2
+          with:
+            python-version: 3.x
+        - run: |
+            pip install lazydocs mkdocs mkdocs-awesome-pages-plugin
+        - run: ./build-docs.sh
+        - run: mkdocs gh-deploy --force
