--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,15 +21,15 @@ jobs:
         run: pytest atm/tests
 
   docs:
-
-    deploy:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v2
-        - uses: actions/setup-python@v2
-          with:
-            python-version: 3.x
-        - run: |
-            pip install lazydocs mkdocs mkdocs-awesome-pages-plugin
-        - run: ./build-docs.sh
-        - run: mkdocs gh-deploy --force
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out source repository
+        uses: actions/checkout@v2
+      - name: Set up Python environment
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.10"
+      - name: Install dependencies
+        run: pip install lazydocs mkdocs mkdocs-awesome-pages-plugin
+      - name: Deploy docs
+        run: ./build-docs.sh && mkdocs gh-deploy --force
