--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,9 +24,10 @@ jobs:
     
     runs-on: ubuntu-latest
     steps:
-      - uses: stefanzweifel/git-auto-commit-action@v5
       - name: Check out source repository
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.head_ref }}
       - name: Set up Python environment
         uses: actions/setup-python@v2
         with:
@@ -35,4 +36,10 @@ jobs:
         run: pip install lazydocs mkdocs mkdocs-awesome-pages-plugin
       - name: build docs
         run: chmod +x build-docs.sh && ./build-docs.sh
+      - name: Auto-commit
+        uses: docker://cdssnc/auto-commit-github-action
+        env:
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}
+        with:
+          args: This is an auto-commit
 
